--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,4 +10,6 @@ workflows:
   welcome:
     # Run the welcome/run job in its own container
     jobs:
-      - welcome/run
+      steps:
+      - run: npm i
+      - run: node index.js
