--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,5 +11,4 @@ workflows:
     # Run the welcome/run job in its own container
     jobs:
       steps:
-      - run: npm i
-      - run: node index.js
+      - run: npm run build
